2002-12-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03559] Re: use select instead of signal for loading images
	* fm.h (Buffer): add image_loaded
	* image.c (W3M_SIGIMG): deleted
		(image_lock): deleted
		(need_load_image): deleted
		(load_image_handler): deleted
		(load_image_next): deleted
		(getAllImage): check image_loaded
		(loadImage): delete image_lock
			delete IMG_FLAG_NEXT
	* main.c (main): check image_loaded
	* proto.h (sleep_till_anykey): return int
	* terms.c (sleep_till_anykey): return int

2002-12-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03558] long title is displayed over tab region
	* display.c (redrawNLine): check l < 0
				use addnstr

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03554] Re: Undo/Redo
	* doc/README.func (REDO): added
			(UNDO): added
	* doc-jp/README.func (REDO): added
			(UNDO): added
	* scripts/w3mhelp.cgi.in: (Page/Cursor motion): add undoPos, redoPos

2002-12-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: REDO, UNDO

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03553] Undo/Redo
	* fm.h (Buffer): add undo
		(BufferPos): added
	* funcname.tab (REDO): added
			(UNDO): added
	* main.c (save_buffer_position): added
		(main): save_buffer_position
		(resetPos): added
		(undoPos): added
		(redoPos): added
	* proto.h (undoPos): added
		(redoPos): added

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03552] Re: link list
	* menu.c (accesskey_menu): check hseq
		(list_menu): check hseq

2002-12-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03551] Re: External URI loader
	* file.c (loadGeneralFile): fix SCM_UNKNONWN

2002-12-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: LIST, LIST_MENU, MOVE_LIST_MENU

2002-12-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03549] link list
	* anchor.c (addMultirowsImg): add a->slave
		(getAnchorText): arg AnchorList *al
		(link_list_panel): added