@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.69 2002/12/11 15:07:53 ukai Exp $ */
+/* $Id: proto.h,v 1.70 2002/12/12 23:55:30 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -714,13 +714,15 @@ extern void dictwordat(void);
 #define dictword nulcmd
 #define dictwordat nulcmd
 #endif				/* not USE_DICT */
-
+#if 0
 extern void reloadBuffer(Buffer *buf);
-
+#endif
 extern char *guess_save_name(Buffer *buf, char *file);
 
 extern void wrapToggle(void);
+#ifdef USE_BUFINFO
 extern void saveBufferInfo(void);
+#endif
 
 extern void dispVer(void);
 
