@@ -1,3 +1,12 @@
+2002-12-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03562] #undef BUFINFO
+	* config.h.dist (BUFINFO): undef
+	* configure (use_bufinfo): n
+	* main.c (saveBufferInfo): ifdef USE_BUFINFO
+	* proto.h (reloadBuffer): if 0
+		(saveBufferInfo): ifdef USE_BUFINFO
+
 2002-12-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03559] Re: use select instead of signal for loading images
@@ -5737,4 +5746,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.613 2002/12/11 15:07:53 ukai Exp $
+$Id: ChangeLog,v 1.614 2002/12/12 23:55:30 ukai Exp $
